Browser window fix
The window before had a horizontal scrollbar and would not display all
of the text in one view. Fixed by showing only the vertical scrollbar,
as well as deleting the code that changes the width based on viewport
size.

--- a/static/lectures/main.css
+++ b/static/lectures/main.css
@@ -1,1 +1,1 @@
-.centerdevices .browserwrapper .mask{overflow:scroll;}
+.centerdevices .browserwrapper .mask{overflow-y:scroll;}
